wordsmith agenda and takeaways

--- a/slides.html
+++ b/slides.html
@@ -230,7 +230,7 @@ Dylan Pieper<br>Data &amp; Social Scientist
 <p><img data-src="https://ellmer.tidyverse.org/logo.png" alt="Ellmer R package logo"></p>
 </div>
 </div><div class="column" style="width:40%;">
-<h3 class="fragment fade-in-then-semi-out" id="use-libraryellmer-robustly-for-delicate-use-cases">Use <a href="https://ellmer.tidyverse.org/"><code>library(ellmer)</code></a> robustly for delicate use cases</h3>
+<h3 class="fragment fade-in-then-semi-out" id="use-libraryellmer-for-robust-classification-focusing-on">Use <a href="https://ellmer.tidyverse.org/"><code>library(ellmer)</code></a> for robust classification, focusing on:</h3>
 <div class="fragment fade-up">
 <ul>
 <li>Structure</li>
@@ -740,9 +740,9 @@ themselves.</code></pre>
 <h2>Takeaways</h2>
 <ul>
 <li class="fragment">LLMs are accessible tools for <strong>unstructured data analysis</strong></li>
-<li class="fragment">Use minimal prompting that focuses on <strong>structure</strong> and <strong>task limitations</strong></li>
-<li class="fragment">Use <strong>uncertainty scores</strong> and <strong>human review</strong></li>
-<li class="fragment">Use LLMs to <strong>develop</strong> and <strong>validate</strong> existing tools</li>
+<li class="fragment">Use minimal prompting that focuses on <strong>data structure</strong> and <strong>task boundaries</strong> or <strong>limitations</strong></li>
+<li class="fragment">Use <strong>uncertainty scores</strong> and <strong>human review</strong> to evaluate LLM output</li>
+<li class="fragment">Use LLMs to <strong>develop</strong> and <strong>improve</strong> existing ML tools</li>
 </ul>
 </section>
 <section id="thank-you" class="slide level2">
